# FPTLC

./: FPTLC.cabal
lib/: Expression.hs  Parse.hs  Parsec.hs  Playground.hs  Reduction.hs
tests/: Spec.hs
