name: FPTLC
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

library
    build-depends:
        base -any,
        parsec -any
    default-language: Haskell2010
    hs-source-dirs: lib
    exposed-modules:
        Parse
        Parsec
        Expression
        Reduction
    other-modules:
        Playground

test-suite fptlc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base
                     , FPTLC
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
